syntax = "proto3";

import "google/protobuf/timestamp.proto";
//import "google/protobuf/empty.proto";

package proto;

option go_package = ".;rpc";

// Decision decision:
// success param is when user passes both validation and CSRF token if any
// ErrorReason is the reason (if any) for failure in processing request

// UserRoles for now
enum Roles {
    INVALID = 0;
    GUEST = 1;
    USER = 2;
    ADMIN = 3; // can be Org or Project Admin
    SUPERADMIN = 4; // can do all
}

// resource: Project
message Project {
    string id = 1;
}

// resource: Org
message Org {
    string id = 1;
}

// UserRole as a message is super simple
// and probably not the very best
// it defines the role as an enum of Roles
// alongside either None (for guest)
// or All ( superadmin)
// or specific project by its id (Project admin)
// or specific org by its id (Org admin)
message UserRoles {
    Roles role = 1;
    oneof resource {
        Project project = 2;
        Org org = 3;
        bool none = 4;
        bool all = 5;
    }
}

message Account {
    string id = 1;
    string email = 2;
    string password = 3;
    UserRoles role = 4;
}

message ErrorReason {
    string reason = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string password_confirm = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string access_token = 2;
    string refresh_token = 3;
    ErrorReason error_reason = 4;
    google.protobuf.Timestamp last_login = 5;
}

message RegisterResponse {
    bool success = 1;
    string success_msg = 2;
    ErrorReason error_reason = 3;
}

message ForgotPasswordRequest {
    string email = 1;
}

message ForgotPasswordResponse {
    bool success = 1;
    string success_msg = 2;
    ErrorReason error_reason = 3;
    google.protobuf.Timestamp forgot_password_requested_at = 4;
}

message ResetPasswordRequest {
    string email = 1;
    string password = 2;
    string password_confirm = 3;
}

message ResetPasswordResponse {
  bool success = 1;
  string success_msg = 2;
  ErrorReason error_reason = 3;
  google.protobuf.Timestamp reset_password_requested_at = 4;
}

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
    // ForgotPassword, then ResetPassword if succeed
    rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {};
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {};
}

